   is done to avoid accidentally generating header files with the same name
   as those in the C library. Take for instance, float.lsp -> float.h.

 - ECL no longer relies on "git" being installed to gather the git commit id
   and setting (ext:lisp-implementation-vcs-id).

 - When building shared and statically linked libraries, ECL creates an
   extra function that performs two tasks: initializing ECL if it wasn't done
   before, and initializing the library. This can be used to create standalone
   libraries to be linked with other programs. The name of the function typically
   begins with main_dll or main_lib but it is output by ECL on screen.

 - Hash tables do no longer have implicit locking. All complex structures in
   ECL (arrays, hash tables, objects) should be dealt with sufficient care on
   the user side, just as in other programming languages, making use of
   WITH-LOCK and similar facilities.

 - In OPEN the default format is :UTF-8 for Unicode builds and :LATIN-1 for
   others, and the stream element type is always CHARACTER by default.

 - Function read_VV is renamed to ecl_init_module()

 - Initialization of random number generator is done using only 16 bytes from
   /dev/urandom (Phillip Marek).

 - Each thread keeps a copy of the process sigmask (POSIX) and it is inherited
   by children thread. The sigmask can be manipulated by the function
   EXT:CATCH-SIGNAL which has the signature
	(ext:catch-signal signal-code action &key process)
   The ACTION is one of :IGNORE, :DEFAULT, :CATCH, determining what ECL does
   when it receives the signal, or it can be :MASK/:UNMASK to determine whether
   the process is blocking the signal or not. The optional argument :PROCESS
   only applies to :MASK/:UNMASK and it can be the current process, some
   process that has not been activated or any other value (indicating that
   the function has a global effect, as sigprocmask).

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***